fixed statspanel to not extend off screen

--- a/frontend/src/components/SearchBar.css
+++ b/frontend/src/components/SearchBar.css
@@ -3,8 +3,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 2rem;
-  margin-bottom: 0.1rem;
+  margin-top: 0;
+  margin-bottom: 0;
   padding: 1rem;
   background-color: #f8f8f8;
   border-radius: 12px;
